--- a/App3/App3/MainPage.xaml
+++ b/App3/App3/MainPage.xaml
@@ -15,7 +15,7 @@
                 VerticalOptions="CenterAndExpand"
                 HorizontalOptions="Center"
                 Clicked="Button_Clicked"></Button>
-        <Label x:Name="recon" Text="Texto convertido" FontSize="16" Padding="30,0,30,0"/>
+        <Label IsVisible='False' x:Name="recon" Text="Texto convertido" FontSize="16" Padding="30,0,30,0"/>
     </StackLayout>
 
 </ContentPage>
