--- a/App3/App3/Views/AnaliseView.xaml
+++ b/App3/App3/Views/AnaliseView.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:App3"
-             x:Class="App3.MainPage">
+             x:Class="App3.AnaliseView">
 
     <StackLayout>
         <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
@@ -16,6 +16,7 @@
                 HorizontalOptions="Center"
                 Clicked="Button_Clicked"></Button>
         <Label IsVisible='False' x:Name="recon" Text="Texto convertido" FontSize="16" Padding="30,0,30,0"/>
+        <Button Text="Ver Análises dos Áudios" Command="{Binding VerAnaliseAudiosCommand}"></Button>
     </StackLayout>
 
 </ContentPage>
